@@ -8,6 +8,8 @@
     * Add PDFedit, add marks and annotations on PDF files.
     * Add GoldenDict, one of the best dictionary applications.
     * Add Artha, looking up synonyms and antonyms.
+    * Add MyTourbook, excellent route planner, and GPS log analyser software.
+    
 
 2010-07-26 Homer Xing <homer.xing@gmail.com>
 
